# lfe

./: DESCRIPTION  LICENSE  MD5  NAMESPACE  NEWS  NEWS.md  README.md  aclocal.m4  cleanup  configure  configure.ac
R/: bccorr.R  btrap.R  cgsolve.R  chmethod.R  compfactor.R  condfstat.R  demeanlist.R  efactory.R  felm.R  felm.old.R  fepois.R  generics.R  getfe.R  is.estimable.R  kaczmarz.R  lfe-package.R  lfe.R  nlexpect.R  oldfelm.R  startup.R  trace.R  utils.R  waldtest.R
exec/: lfescript
inst/: CITATION  NEWS.Rd  TODO  devtools_internal.R
man/: bccorr.Rd  btrap.Rd  cgsolve.Rd  chainsubset.Rd  compfactor.Rd  condfstat.Rd  demeanlist.Rd  diammatrix.Rd  dot-.oldfelm.Rd  efactory.Rd  felm.Rd  fepois.Rd  fevcov.Rd  getfe.Rd  is.estimable.Rd  kaczmarz.Rd  lfe-package.Rd  makeDmatrix.Rd  mctrace.Rd  nlexpect.Rd  print.lm.fe.Rd  summary.Rd  summary.felm.Rd  varvars.Rd  waldtest.Rd
src/: Crowsum.c  Makevars  Makevars.in  Makevars.win  config.h  config.h.in  config.h.win  crowsum.c  demean.c  factor.c  kaczmarz.c  lfe.c  lfe.h  utils.c
tests/: anomalies.R  anomalies.Rout.save  bctest.R  bctest.Rout.save  cgsolve.R  cgsolve.Rout.save  cluster.R  cluster.Rout.save  comparelm.R  comparelm.Rout.save  degenerate.R  degenerate.Rout.save  efcheck.R  efcheck.Rout.save  fourfac.R  fourfac.Rout.save  intact.R  intact.Rout.save  interact.R  interact.Rout.save  ivtest.R  ivtest.Rout.save  lfetest.R  lfetest.Rout.save  mlhs.R  mlhs.Rout.save  multiway.R  multiway.Rout.save  naomit.R  naomit.Rout.save  nonest.R  nonest.Rout.save  onefac.R  onefac.Rout.save  verify.R  verify.Rout.save  weights.R  weights.Rout.save
vignettes/: identification.Rnw  lfehow.Rnw  speed.Rnw
(+14 files in other folders)
